--- a/e2.html
+++ b/e2.html
@@ -33,13 +33,13 @@
             <!-- Python Video -->
             <article class="video-card">
                 <div class="thumbnail-container">
-                    <a href="https://www.youtube.com/watch?v=K2lfyPAwD80"><img src="thumbnail\th4.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
+                    <a href="https://www.youtube.com/watch?v=K2lfyPAwD80"><img src="th4.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
                 </div>
                 <div class="video-info">
                     <h3 class="video-title">All JavaScript Syntax in 53 Minutes</h3>
                     <div class="video-meta">
                         <div class="channel-avatar" aria-hidden="true">
-                            <a href="https://www.youtube.com/@beau"><img src="pfp\pfp1.jpg" 
+                            <a href="https://www.youtube.com/@beau"><img src="pfp1.jpg" 
                                 alt="Profile Picture"
                                 style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;"></a>
                         </div>
@@ -54,13 +54,13 @@
             <!-- JavaScript Video -->
             <article class="video-card">
                 <div class="thumbnail-container">
-                    <a href="https://www.youtube.com/watch?v=q-_ezD9Swz4"><img src="thumbnail/th5.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
+                    <a href="https://www.youtube.com/watch?v=q-_ezD9Swz4"><img src="th5.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
                 </div>
                 <div class="video-info">
                     <h3 class="video-title">Learn To Code Like a GENIUS</h3>
                     <div class="video-meta">
                         <div class="channel-avatar" aria-hidden="true">
-                            <a href="https://www.youtube.com/@TheCodingSloth"><img src="pfp\pfp2.jpg" 
+                            <a href="https://www.youtube.com/@TheCodingSloth"><img src="pfp2.jpg" 
                                 alt="Profile Picture"
                                 style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;"></a>
                         </div>
@@ -77,13 +77,13 @@
             <!-- HTML/CSS Video -->
             <article class="video-card">
                 <div class="thumbnail-container">
-                    <a href="https://www.youtube.com/watch?v=UFc-RPbq8kg"><img src="thumbnail/th6.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
+                    <a href="https://www.youtube.com/watch?v=UFc-RPbq8kg"><img src="th6.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
                 </div>
                 <div class="video-info">
                     <h3 class="video-title">Problem-Solving for Developers</h3>
                     <div class="video-meta">
                         <div class="channel-avatar" aria-hidden="true">
-                            <a href="https://www.youtube.com/@Fireship"><img src="pfp/pfp3.jpg" 
+                            <a href="https://www.youtube.com/@Fireship"><img src="pfp3.jpg" 
                                 alt="Profile Picture"
                                 style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;"></a>
                         </div>
